# tracer-infer

./: build-infer.sh  opam.locked
facebook-clang-plugins/clang/: setup.sh
infer/src/: .ocamlformat  Makefile
infer/src/IR/: Binop.ml  Binop.mli  Const.ml  Const.mli  Exp.ml  Exp.mli  Ident.ml  Ident.mli  ProcAttributes.ml  ProcAttributes.mli  Pvar.ml  Pvar.mli  Unop.ml  Unop.mli
infer/src/absint/: Errlog.ml  Errlog.mli  Reporting.ml  Reporting.mli
infer/src/api-misuse/: APIMisuseChecker.ml  APIMisuseDomain.ml  APIMisuseModel.ml  APIMisuseSemantics.ml  APIMisuseTrace.ml  dune  util.ml
infer/src/atd/: jsonbug.atd
infer/src/backend/: Issue.ml  Payloads.ml  Payloads.mli  dune  registerCheckers.ml
infer/src/base/: Checker.ml  Checker.mli  Config.ml  Config.mli  IssueType.ml  IssueType.mli  Location.ml  Location.mli
infer/src/biabduction/: BiabductionReporting.ml
infer/src/bufferoverrun/: absLoc.ml  absLoc.mli  bufferOverrunAnalysis.ml  bufferOverrunDomain.ml  bufferOverrunDomain.mli  bufferOverrunModels.ml  bufferOverrunOndemandEnv.ml  bufferOverrunSemantics.ml  bufferOverrunUtils.ml  bufferOverrunUtils.mli
infer/src/cost/: cost.ml
infer/src/integration/: CostIssuesTest.ml  Differential.ml  IssuesTest.ml  JsonReports.ml  JsonReports.mli  TraceBugs.ml
infer/src/nullsafe/: ClassLevelAnalysis.ml  EradicateReporting.ml
